--- a/about.html
+++ b/about.html
@@ -136,9 +136,9 @@
                 <h2 class="about-section-title">Contact and Visits</h2>
                 <div class="contact-info-grid">
                     <div class="contact-item">
-                        <h4 class="contact-label">Phone</h4>
+                        <h4 class="contact-label">Whatsapp</h4>
                         <p class="contact-value">
-                            <a href="tel:+527771202775" class="contact-link">+52 777 120 2775</a>
+                            <a href="https://wa.me/527771202775" class="contact-link">+52 777 120 2775</a>
                         </p>
                     </div>
                     <div class="contact-item">
@@ -155,11 +155,6 @@
                         </p>
                     </div>
                 </div>
-                <p class="about-text" style="margin-top: 2rem;">
-                    We invite you to visit our gallery and experience art in person.
-                    For inquiries about specific works or to schedule a private visit,
-                    please don't hesitate to contact us.
-                </p>
             </div>
         </div>
     </section>
