--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <!-- Theme Card 6 - All -->
                 <a href="gallery.html" class="art-card">
                     <div class="art-image-wrapper">
-                        <img src="images/artworks/obra1.jpg" alt="View All" class="art-image">
+                        <img src="images/artworks/todas.jpg" alt="View All" class="art-image">
                     </div>
                     <div class="art-info">
                         <h3 class="art-title">View All</h3>
