--- a/product.html
+++ b/product.html
@@ -54,7 +54,7 @@
                 <h4 class="footer-heading">Contact</h4>
                 <p class="footer-text">
 
-                    <a href="tel:+527771202775" class="footer-link">+52 777 120 2775</a><br>
+                    <a href="tel:+527771202775" class="footer-link">+52 777 120 2775</a>
                     <a href="mailto:claudia@backyou.com.mx" class="footer-link">claudia@backyou.com.mx</a>
                 </p>
             </div>
