--- a/about.html
+++ b/about.html
@@ -163,7 +163,7 @@
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-column">
-                <h3 class="footer-title"><img src="logo1g.png" alt="ONO Gallery" class="logo-img footer-logo"></h3>
+                <h3 class="footer-title"><img src="logo1b.PNG" alt="ONO Gallery" class="logo-img footer-logo"></h3>
                 <p class="footer-text">
 
                 </p>
