--- a/index.html
+++ b/index.html
@@ -198,7 +198,8 @@
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-column">
-                <h3 class="footer-title"><img src="logo1g.png" alt="ONO Gallery" class="logo-img footer-logo">
+                <h3 class="footer-title"><img src="logo1g.PNG" alt="ONO Gallery" class="logo-img footer-logo"
+                        id="footer-logo">
                 </h3>
                 <p class="footer-text">
 
